--- a/app/src/main/res/layout/news_row.xml
+++ b/app/src/main/res/layout/news_row.xml
@@ -1,5 +1,17 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<layout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto">
+
+    <data>
+        <variable
+            name="newsmodel"
+            type="com.test.xebia.nytimes.model.NewsModel" />
+
+        <variable
+            name="imageUrl"
+            type="String" />
+    </data>
+<LinearLayout
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:orientation="horizontal"
@@ -15,7 +27,8 @@
         <ImageView
             android:layout_width="100dp"
             android:layout_gravity="right"
-            android:layout_height="100dp"/>
+            android:layout_height="100dp"
+           />
 
     </LinearLayout>
 
@@ -30,14 +43,14 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginBottom="@dimen/margin_bottom_medium"
-            android:text="Times of india"
+            android:text="@{newsmodel.source}"
             android:textSize="@dimen/text_font_small" />
 
         <TextView
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginBottom="@dimen/margin_bottom_small"
-            android:text="Not a single charge framed’: P Chidambaram walks out of Tihar Jail, visits Sonia Gandhi"
+            android:text="@{newsmodel.title}"
             android:textColor="@android:color/black"
             android:textSize="@dimen/text_font_medium" />
 
@@ -51,7 +64,7 @@
         <TextView
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="2 hours ago"
+            android:text="@{newsmodel.published_date}"
             android:gravity="right"
             android:textSize="@dimen/text_font_small" />
 
@@ -72,3 +85,4 @@
 
 
 </LinearLayout>
+</layout>
