--- a/app/src/main/res/layout/news_row.xml
+++ b/app/src/main/res/layout/news_row.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
-<layout xmlns:android="http://schemas.android.com/apk/res/android">
+<layout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto">
 
     <data>
         <variable
@@ -27,6 +28,7 @@
             android:layout_width="100dp"
             android:layout_gravity="right"
             android:layout_height="100dp"
+            app:imagefromurl="@{imageUrl}"
             android:src="@drawable/nylogo"
            />
 
